# minitemplate

./: CMakeLists.txt  README.md  init.bat
runSolution/: CMakeLists.txt  main.cpp
